[project]
name = "aws-llm-league"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.21",
    "langgraph-cli[inmem]>=0.1.79",
    "langgraph>=0.3.18",
    "langchain-openai>=0.3",
    "python-dotenv>=1.0.1",
    "langchain-community>=0.3.20",
    "tavily-python>=0.5.1",
]
